# learning_mcp

./: client.py  pyproject.toml  server.py
learning_client/: 00_Abit_Ultra_basic.py  00_basic_with_context_manager.py  01_connection_open_close_with_asynccontextmanager.py  02_client_session.py  03_nested_client_connection_sessions.py  05_Clearnup_in_AsyncExitStack_in_connection_client.py  06_client_.py  output.txt
